--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -1,11 +1,23 @@
-conf:
-  listen:
-    host: 127.0.0.1     #  listening ip or host name
-    port: 9000          #  listening port
-  log:
-    error_log:
-      level: warn       # supports levels, lower to higher: debug, info, warn, error, panic, fatal
-      file_path: logs/error.log
+
+listen:
+  host: 0.0.0.0     #  listening ip or host name
+  port: 9000          #  listening port
+
+log:
+  error_log:
+    level: warn       # supports levels, lower to higher: debug, info, warn, error, panic, fatal
+    file_path: logs/error.log
 authentication:
-  AppKey:
-  AppSecret:
+  AppKey: dingicgycuisw7lrqcj8
+  AppSecret: pUTLevcbvk9EWdJKF7kzj5-Txc_7CHdyrO9eFiObLj7Qb6F3Y7q8YfXnwhtIFTvI
+
+ldap:
+  url :  test
+  user:   12
+  password:  sdf
+
+DB:
+  dbtype: mysql    #db type , for example  mysql/postpre and so on
+  username: user
+  password: word
+  dbname  : name
