--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -8,8 +8,8 @@ log:
     level: warn       # supports levels, lower to higher: debug, info, warn, error, panic, fatal
     file_path: logs/error.log
 authentication:
-  AppKey: dingicgycuisw7lrqcj8
-  AppSecret: pUTLevcbvk9EWdJKF7kzj5-Txc_7CHdyrO9eFiObLj7Qb6F3Y7q8YfXnwhtIFTvI
+  appkey: dingicgycuisw7lrqcj8
+  appsecret: pUTLevcbvk9EWdJKF7kzj5-Txc_7CHdyrO9eFiObLj7Qb6F3Y7q8YfXnwhtIFTvI
 
 ldap:
   url :  test
