--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -12,9 +12,13 @@ authentication:
   appsecret: pUTLevcbvk9EWdJKF7kzj5-Txc_7CHdyrO9eFiObLj7Qb6F3Y7q8YfXnwhtIFTvI
 
 ldap:
-  url :  test
-  user:   12
-  password:  sdf
+  addr :  192.168.137.201:389     #server  IP+port
+  bindUserName:   cn=manager,dc=asinking,dc=com
+  bindPassword:  1qaz@WSX
+  searchdn:  dc=asinking,dc=com
+#  url: 10.48.8.15:1389     #server  IP+port
+#  user: anyconnect
+#  password: test123
 
 DB:
   dbtype: mysql    #db type , for example  mysql/postpre and so on
