--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -1,3 +1,7 @@
+default:
+  status_list: "2,3,5,-1"     #获取用户状态   2：试用期   3：正式    5：待离职    -1：无状态
+  user_offset: 50
+
 
 listen:
   host: 0.0.0.0     #  listening ip or host name
