--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -17,9 +17,13 @@ authentication:
   appsecret: pUTLevcbvk9EWdJKF7kzj5-Txc_7CHdyrO9eFiObLj7Qb6F3Y7q8YfXnwhtIFTvI
 
 ldap:
-  addr :  192.168.137.201:389     #server  IP+port
-  bindUserName:   cn=manager,dc=asinking,dc=com
-  bindPassword:  1qaz@WSX
+  addr :  127.0.0.1:389     #server  IP+port
+#  bindUserName:   cn=manager,dc=asinking,dc=com
+  bindUserName:   cn=admin,dc=asinking,dc=com
+#  bindPassword:  1qaz@WSX
+  bindPassword: 123
+
+
   searchdn:  dc=asinking,dc=com
 #  url: 10.48.8.15:1389     #server  IP+port
 #  user: anyconnect
