--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -17,11 +17,11 @@ authentication:
   appsecret: pUTLevcbvk9EWdJKF7kzj5-Txc_7CHdyrO9eFiObLj7Qb6F3Y7q8YfXnwhtIFTvI
 
 ldap:
-  addr :  127.0.0.1:389     #server  IP+port
-#  bindUserName:   cn=manager,dc=asinking,dc=com
-  bindUserName:   cn=admin,dc=asinking,dc=com
-#  bindPassword:  1qaz@WSX
-  bindPassword: 123
+  addr :  192.168.137.201:389     #server  IP+port
+  bindUserName:   cn=manager,dc=asinking,dc=com
+#  bindUserName:   cn=admin,dc=asinking,dc=com
+  bindPassword:  1qaz@WSX
+#  bindPassword: 123
 
 
   searchdn:  dc=asinking,dc=com
