--- a/conf/conf.yml
+++ b/conf/conf.yml
@@ -13,17 +13,17 @@ log:
     level: warn       # supports levels, lower to higher: debug, info, warn, error, panic, fatal
     file_path: logs/error.log
 authentication:
-  appkey: dingicgycuisw7lrqcj8
-  appsecret: pUTLevcbvk9EWdJKF7kzj5-Txc_7CHdyrO9eFiObLj7Qb6F3Y7q8YfXnwhtIFTvI
+  appkey: xxxx
+  appsecret: xxxxx
 
 ldap:
   addr: 127.0.0.1:389     #server  IP+port
-  bindUserName:   cn=admin,dc=asinking,dc=com
+  bindUserName:   cn=admin,dc=xxxx,dc=com
   bindPassword: 123
-#  addr :  192.168.137.201:389     #server  IP+port
-#  bindUserName:   cn=manager,dc=asinking,dc=com
-#  bindPassword:  1qaz@WSX
-  searchdn:  dc=asinking,dc=com
+  #  addr :  192.168.137.201:389     #server  IP+port
+  #  bindUserName:   cn=manager,dc=xxx,dc=com
+  #  bindPassword:  1qaz@WSX
+  searchdn:  dc=xxx,dc=com
 #  url: 10.48.8.15:1389     #server  IP+port
 #  user: anyconnect
 #  password: test123
